--- a/index.html
+++ b/index.html
@@ -2,92 +2,276 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em;
-        }
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Your description">
+    <meta name="author" content="Your name">
 
-        section {
-            max-width: 800px;
-            margin: 2em auto;
-            padding: 2em;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
+    <meta property="og:site_name" content="" /> <!-- website name -->
+    <meta property="og:site" content="" /> <!-- website link -->
+    <meta property="og:title" content="" /> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
-        h1 {
-            color: #333;
-        }
+    <!-- Webpage Title -->
+    <title>Abhishek Patil | Portfolio</title>
 
-        p {
-            line-height: 1.6;
-            color: #666;
-        }
+    <!-- Styles -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@600&display=swap"
+        rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/fontawesome-all.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
-        a {
-            color: #007BFF;
-            text-decoration: none;
-        }
+    <!-- Favicon  -->
+    <link rel="icon" href="images/favicon-32x32.png">
 
-        a:hover {
-            text-decoration: underline;
-        }
+    <!-- EmailJs -->
+    <script type="text/javascript" src="/js/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init('MhQDX3A4M5CPiKTCH');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function () {
+            document.getElementById('contactForm').addEventListener('submit', function (event) {
+                event.preventDefault();
+                // generate a five digit number for the contact_number variable
+                this.cname = document.getElementById("cname").value;
+                this.cemail = document.getElementById("cemail").value;
+                this.cmessage = document.getElementById("cmessage").value;
+                
+                    // these IDs from the previous steps
+                    emailjs.sendForm('service_7k4zum8', 'template_qkuxg3p', this)
+                    .then(function () {
+                        alert('Your message has been received!');
+                        document.getElementById("contactForm").reset()
 
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+                    }, function (error) {
+                        alert('Sorry, your request could not be received. Please try again later.', error);
+                        console.log('FAILED...', error);
+                        document.getElementById("contactForm").reset()
+
+                    });
+            });
         }
-    </style>
+    </script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".fixed-top">
 
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
+        <div class="container">
 
-    <section>
-        <h2>About Me</h2>
-        <p>Write a brief introduction about yourself and your skills. Highlight your key achievements and experiences.
-        </p>
-    </section>
+            <!-- Image Logo -->
+            <a class="navbar-brand logo-image" href="index.html"><img class="borderRadius10" src="images/Abhishek_website_logo.png"
+                    alt="alternative"></a>
 
-    <section>
-        <h2>Portfolio</h2>
-        <p>Showcase some of your best work with links to the projects. You can include images, descriptions, and links
-            to live demos or GitHub repositories.</p>
-    </section>
+            <!-- Text Logo - Use this if you don't have a graphic logo -->
+            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Mark</a> -->
 
-    <section>
-        <h2>Contact</h2>
-        <p>Provide a way for visitors to contact you. You can include a contact form or links to your social media
-            profiles and email address.</p>
-    </section>
+            <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <footer>
-        <p>&copy; 2023 Your Name | Designed by Your Name</p>
-    </footer>
+            <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <span class="nav-item social-icons">
+                    <span class="fa-stack">
+                        <a hre target="_blank" href="https://twitter.com/p__abhishekk">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-twitter fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a target="_blank" href="https://github.com/maverikkano">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-github fa-stack-1x"></i>
+                        </a>
+                    </span>
+                    <span class="fa-stack">
+                        <a target="_blank" href="https://www.linkedin.com/in/abhipatil16/">
+                            <i class="fas fa-circle fa-stack-2x"></i>
+                            <i class="fab fa-linkedin fa-stack-1x"></i>
+                        </a>
+                    </span>
+                </span>
+            </div> <!-- end of navbar-collapse -->
+        </div> <!-- end of container -->
+    </nav> <!-- end of navbar -->
+    <!-- end of navigation -->
 
+
+    <!-- Header -->
+    <header id="header" class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="text-container">
+                        <h1 class="h1-large">Engineer extraordinaire</h1>
+                        <a class="btn-solid-lg page-scroll" href="https://tech.abhishekpatil.blog" target="_blank">The
+                            Elemental : Tech Blog</a>
+                        <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Me</a>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </header> <!-- end of header -->
+    <!-- end of header -->
+
+
+    <!-- About-->
+    <div id="about" class="basic-1 bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="text-container first">
+                        <img id="personal-photo" src="/images/Abhi_Fwd.jpg" alt="Abhishek Patil's photo">
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-4">
+                    <div class="text-container second">
+                        <h3>Hi, I'm Abhishek,</h3>
+                        <p>I find life and solace in playing with ideas boundlessly, and trying to materialize those into prototypes. My sin of choice is Computers. 
+                        </p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6">
+                    <div class="text-container third">
+                        <div class="time">January 2023 - current</div>
+                        <h6>Software Engineer</h6>
+                        <p>eQ Technologic Pvt. Ltd.</p>
+                        <div class="time">February 2021 - December 2022</div>
+                        <h6>Assistant Systems Engineer</h6>
+                        <p>Tata Consultancy Services Ltd.</p>
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div id="github-chart-div">
+                <img id="github-chart-img" src="http://ghchart.rshah.org/maverikkano"
+                    alt="maverikkano's Github chart" />
+            </div>
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-1 -->
+    <!-- end of about -->
+
+    <!-- My Testimonials -->
+        <div id="testimonials" class="form-1 bg-gray">
+            <div class="container">
+                <h2>People I've worked with say this about me...</h2>
+                <img class="testimonial borderRadius10" src="/images/Testimonial-1.png" alt="Testimonial-1">
+            </div>
+        </div>
+    <!-- end of My Testimonials -->
+
+    <!-- Contact -->
+    <div id="contact" class="form-1 bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Get in touch with me...</h2>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Contact Form -->
+                    <form id="contactForm">
+                        <div class="form-group">
+                            <input type="text" class="form-control-input" id="cname" name="cname" required>
+                            <label class="label-control" for="cname">Name</label>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control-input" id="cemail" name="cemail" required>
+                            <label class="label-control" for="cemail">Email</label>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control-textarea" id="cmessage" name="cmessage" required></textarea>
+                            <label class="label-control" for="cmessage">message...</label>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="form-control-submit-button">Submit</button>
+                        </div>
+                    </form>
+                    <!-- end of contact form -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of form-1 -->
+    <!-- end of contact -->
+
+    <!-- Footer -->
+    <div class="footer bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="social-container">
+                        <span class="fa-stack">
+                            <a target="_blank" href="https://twitter.com/p__abhishekk">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-twitter fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a target="_blank" href="https://github.com/maverikkano">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-github fa-stack-1x"></i>
+                            </a>
+                        </span>
+                        <span class="fa-stack">
+                            <a target="_blank" href="https://www.linkedin.com/in/abhipatil16/">
+                                <i class="fas fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-linkedin fa-stack-1x"></i>
+                            </a>
+                        </span>
+                    </div> <!-- end of social-container -->
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of footer -->
+    <!-- end of footer -->
+
+
+    <!-- Copyright -->
+    <div class="copyright bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p class="p-small">Copyright © <a class="no-line" href="#">Abhishek Patil</a></p>
+                </div> <!-- end of col -->
+            </div> <!-- enf of row -->
+        </div> <!-- end of container -->
+
+    </div> <!-- end of copyright -->
+    <!-- end of copyright -->
+
+
+    <!-- Scripts -->
+    <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+    <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="js/scripts.js"></script> <!-- Custom scripts -->
 </body>
 
 </html>
