Testimonial image changed and resized

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div id="testimonials" class="form-1 bg-gray">
             <div class="container">
                 <h2>People I've worked with say this about me...</h2>
-                <img class="testimonial borderRadius10" src="/images/Testimonial-1.png" alt="Testimonial-1">
+                <img id="testimonial-1" class="testimonial borderRadius10" src="/images/Testimonial-1.png" alt="Testimonial-1">
             </div>
         </div>
     <!-- end of My Testimonials -->
