--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href="css/styles.css" rel="stylesheet">
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/favicon-32x32.png">
+    <link rel="icon" href="images/favicon.ico">
 
     <!-- EmailJs -->
     <script type="text/javascript" src="/js/email.min.js"></script>
