Visible properly on mobile devices

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-            <div id="github-chart-div">
+            <div class="col-sm-12" id="github-chart-div">
                 <img id="github-chart-img" src="http://ghchart.rshah.org/maverikkano"
                     alt="maverikkano's Github chart" />
             </div>
